# mcp_demo

./: .gitignore  README.md  mcp_client.py  pyproject.toml
mcp_server/: clean_node.py  math_server.py  server.py  server_sse.py
